--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-  background: green;
+  background: grey;
 }
 .flex-parent{
   display: flex;
@@ -7,7 +7,7 @@ body{
   justify-content: center;
 }
 .profile{
-  width: 30%;
+  width: 100%;
   height: auto;
   background: violet;
   margin: 2%;
@@ -16,7 +16,7 @@ body{
   border-radius: 20px;
 }
 .content{
-  width: 70%;
+  width: 100%;
   height: auto;
   background: pink;
   margin: 2%;
@@ -37,4 +37,84 @@ h1,#roll{
 }
 a{
   text-decoration:none;
+}
+@media only screen and (min-width:360px) and (max-width:480px)
+{
+.flex-parent{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.profile{
+  width: 100%;
+  height: auto;
+  background: violet;
+  margin: 2%;
+  padding: 1%;
+  border: 2px solid #000;
+  border-radius: 20px;
+}
+.content{
+  width: 100%;
+  height: auto;
+  background: pink;
+  margin: 2%;
+  padding: 1%;
+  border: 2px solid #000;
+  border-radius: 20px;
+}
+}
+
+@media only screen and (min-width:480px) and (max-width:760px)
+{
+.flex-parent{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.profile{
+  width: 100%;
+  height: auto;
+  background: violet;
+  margin: 2%;
+  padding: 1%;
+  border: 2px solid #000;
+  border-radius: 20px;
+}
+.content{
+  width: 100%;
+  height: auto;
+  background: pink;
+  margin: 2%;
+  padding: 1%;
+  border: 2px solid #000;
+  border-radius: 20px;
+}
+}
+
+@media only screen and (min-width:761px) and (max-width:1024px)
+{
+.flex-parent{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.profile{
+  width: 100%;
+  height: auto;
+  background: violet;
+  margin: 2%;
+  padding: 1%;
+  border: 2px solid #000;
+  border-radius: 20px;
+}
+.content{
+  width: 100%;
+  height: auto;
+  background: pink;
+  margin: 2%;
+  padding: 1%;
+  border: 2px solid #000;
+  border-radius: 20px;
+}
 }
