--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body{
 .content{
   width: 100%;
   height: auto;
-  background: pink;
+  background: violet;
   margin: 2%;
   padding: 1%;
   border: 2px solid #000;
@@ -37,6 +37,18 @@ h1,#roll{
 }
 a{
   text-decoration:none;
+}
+table{
+  width: 95%;
+}
+td{
+  padding: 1%;
+}
+tr:nth-child(even){
+  background: skyblue;
+}
+tr:nth-child(odd){
+  background: pink;
 }
 @media only screen and (min-width:360px) and (max-width:480px)
 {
